# lyric-repetition

./: .gitignore  README.md  analysis.py  pyproject.toml
text_repetetive/: __main__.py
